seaqt/QtPdf/gen_qpdflink.h

class QMetaObject;
class QPdfLink;
class QPointF;
class QRectF;
class QUrl;
typedef struct QMetaObject QMetaObject;
typedef struct QPdfLink QPdfLink;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QUrl QUrl;
QPdfLink* QPdfLink_new();
QPdfLink* QPdfLink_new2(QPdfLink* other);
void QPdfLink_operatorAssign(QPdfLink* self, QPdfLink* other);
void QPdfLink_swap(QPdfLink* self, QPdfLink* other);
bool QPdfLink_isValid(const QPdfLink* self);
int QPdfLink_page(const QPdfLink* self);
QPointF* QPdfLink_location(const QPdfLink* self);
double QPdfLink_zoom(const QPdfLink* self);
QUrl* QPdfLink_url(const QPdfLink* self);
struct seaqt_string QPdfLink_contextBefore(const QPdfLink* self);
struct seaqt_string QPdfLink_contextAfter(const QPdfLink* self);
struct seaqt_array /* of QRectF* */  QPdfLink_rectangles(const QPdfLink* self);
struct seaqt_string QPdfLink_toString(const QPdfLink* self);
void QPdfLink_copyToClipboard(const QPdfLink* self);
void QPdfLink_copyToClipboardWithMode(const QPdfLink* self, int mode);
const QMetaObject* QPdfLink_staticMetaObject();